Apply Visual Transform(ctrl+a) isn't working with constraints #60971

Closed
opened 2019-01-29 07:13:57 +01:00 by Artem · 11 comments

System Information
Operating system: Win10
Graphics card: GTX 1080 Ti

Blender Version
Broken:
2.80 957b4547ae
Worked:

Short description of error
Apply visual transform doesn't do anything

Exact steps for others to reproduce the error
Add a follow path constraint to any object and try ctrl+a apply visual transform

**System Information** Operating system: Win10 Graphics card: GTX 1080 Ti **Blender Version** Broken: 2.80 957b4547aeeb Worked: **Short description of error** Apply visual transform doesn't do anything **Exact steps for others to reproduce the error** Add a follow path constraint to any object and try ctrl+a apply visual transform
Author

Added subscriber: @Hickz

Added subscriber: @Hickz
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

This file behaves differently in 2.79 and 2.8 when executing "Apply Visual Transform".

follow path.blend

This file behaves differently in 2.79 and 2.8 when executing "Apply Visual Transform". [follow path.blend](https://archive.blender.org/developer/F6442096/follow_path.blend)

Added subscriber: @lewis2e

Added subscriber: @lewis2e

I am also experiencing this - just spend 20 minutes trying to apply a shrinkwrap constraint before I realised that "Apply Visual Transform" wasn't doing anything. Glad it's been reported and confirmed.

I am also experiencing this - just spend 20 minutes trying to apply a shrinkwrap constraint before I realised that "Apply Visual Transform" wasn't doing anything. Glad it's been reported and confirmed.

Added subscriber: @pjoeNone

Added subscriber: @pjoeNone

Also ran into this. Trying to apply result of rigid body simulation and applying the result - doesn't seem to work.

Also ran into this. Trying to apply result of rigid body simulation and applying the result - doesn't seem to work.

Here is a sample .blend:
apply_visual_xform.blend

To reproduce:

  • Start animation and play to e.g. frame 70
  • Pause
  • Choose Menu > Object > Rigid Body > Apply Transformation
  • Notice if the Cube's transform is updated properly
Here is a sample .blend: [apply_visual_xform.blend](https://archive.blender.org/developer/F7086575/apply_visual_xform.blend) To reproduce: - Start animation and play to e.g. frame 70 - Pause - Choose Menu > Object > Rigid Body > Apply Transformation - Notice if the Cube's transform is updated properly

This issue was referenced by ddc19819f3

This issue was referenced by ddc19819f33a434997c6670b1eb2ba7f9c4c5b4d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This comment was removed by @lewis2e

*This comment was removed by @lewis2e*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60971
No description provided.